--- a/css/main_style.css
+++ b/css/main_style.css
@@ -9,7 +9,11 @@ caption,th { text-align:left; }
 h1,h2,h3,h4,h5,h6 { font-size:100%; font-weight:normal; }
 q:before,q:after { content:''; }
 abbr,acronym { border:0; }
-a{text-decoration: none}
+a{text-decoration: none;color: #039;}
+a:hover{
+    background:#039;color:#fff;
+}
+label{font-family: Tahoma;vertical-align: middle;}
 
 /* Font & Container */
 body { font:12px/1.6 arial,helvetica,sans-serif; }
@@ -79,15 +83,307 @@ button { cursor:pointer;line-height:1.2; }
     text-align: left;
     float: left;
     border-radius: 0;
+    margin-top: 10px;
 }
 .nav .nav-search .inp #inp-query{margin: 0;
     width: 242px;
     height: 28px;
-    background: #fff;outline: none;border: none}
-.nav .nav-search .inp-btn{float: left;position: absolute;left:auto;top:10px;right: 0;
+    background: #fff;outline: none;border: none;
+    padding-left: 5px;
+    color: #ccc;
+    font-size: 12px;}
+.nav .nav-search .inp-btn{
+    position: absolute;
+    left: auto;
+    top: 10px;
+    right: 0;
     width: 30px;
-    height: 28px;border: 1px solid #e1e9e1;
+    height: 28px;
+    *height: 30px;
+    border: 1px solid #e1e9e1;
     border-left: none;
     background-color: #fff;
     font-size: 0;
     overflow: hidden;}
+.nav .nav-search .inp-btn input{width: 30px;
+    height: 28px;
+    *height: 30px;
+    padding: 0;
+    margin: 0;
+    line-height: 100px;
+    border: none;
+    background: transparent url(//img3.doubanio.com/dae/accounts/resources/2b3878d/sns/assets/bn_srh_1.png) no-repeat 50% 50%;}
+
+
+
+#wrapper{
+    width: 950px;
+    margin: 0 auto;
+}
+
+#wrapper .article{
+    width: 604px;float: left;
+}
+
+#wrapper .article .statuses{
+    position: relative;
+}
+
+#db-isay{
+    position: relative;
+    padding: 0;
+    margin: -5px 0 2em;
+    z-index: 1;
+}
+#db-isay .isay-links{
+    position: relative;
+    z-index: 2;
+    font-size: 0;
+    height: 30px;
+    line-height: 30px;
+}
+#db-isay .isay-links li{
+    float: left;
+    font-size: 13px;
+    display: inline-block;
+    padding-left: 22px;
+    margin-right: 18px;
+    background: url(../images/isay.png) no-repeat;
+    background: url(../images/isay_reverse.svg) no-repeat,none;
+}
+
+#db-isay .isay-links li.isay-main{background-position: 0 -90px;}
+
+#db-isay .isay-links li.isay-pic{background: url(../images/isay_icon_pic.png)  0 6px no-repeat;background: url(../images/isay_icon_pic_t.png)  0 6px no-repeat;}
+
+#db-isay .isay-links li.notes-link{background-position: 0 -121px;}
+
+#db-isay .isay-links li.commodity-link{background-position: 0 -151px;}
+
+#db-isay .item{
+    border: 1px solid #d7d7d7;
+    border-radius: 1px;
+    position: relative;
+    z-index: 0;
+    margin-bottom: 0;
+    overflow: hidden;
+}
+
+#db-isay #isay-label {
+    margin: 6px 0 0 9px;
+}
+
+#db-isay label {
+    position: absolute;
+    margin: 4px 0 0 6px;
+    font-size: 14px;
+    color: #aaa;
+    pointer-events: none;
+    cursor: text;
+}
+
+#db-isay #isay-cont{
+    width: 568px;
+    height: 15px;
+}
+
+#db-isay textarea {
+    background: transparent;
+    width: 556px;
+    padding: 7px 25px 7px 7px;
+    _margin-top: -1px;
+    height: 16px;
+    overflow: hidden;
+    vertical-align: bottom;
+    border: none;
+    font-family: tahoma;
+    line-height: 1.3;
+    position: relative;
+    z-index: 1;
+    -webkit-transition: all 0.1s;
+    resize: none;
+}
+
+#db-isay .btn{
+    display: block;
+    float: none;
+    width: auto;
+    margin-right: 0;
+    text-align: right;
+    background: #f4f4f4;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-top: none;
+    position: relative;
+}
+
+#db-isay .btn .bn-flat{
+    color: #444;
+    border-width: 1px;
+    border-style: solid;
+    border-color: #bbb #bbb #999;
+    vertical-align: middle;
+    border-radius: 4px;
+    display: inline-block;
+    overflow: hidden;
+}
+
+#db-isay .btn .bn-flat input{
+    font-size: 14px;
+    overflow: visible;
+    line-height: 2.2;
+    height: 2.1em;
+    padding: 0 6px 2px;
+    cursor: pointer;
+    margin: 0;
+    border: none;
+}
+
+#db-isay .btn .lnk-share-tools{
+    position: absolute;
+    left: 10px;
+    top: 15px;
+    line-height: 1.4;
+}
+
+#content .article .paginator{
+    width: 100%;
+    text-align: center;
+    font: 14px Arial, Helvetica, sans-serif;
+    color: #aaa;
+    margin: 20px 0;
+    line-height: 150%;
+}
+
+#content .article .paginator .prev{margin-right: 20px;}
+
+#content .article .paginator a{color: #37a;text-decoration: none;padding: 0px 4px;margin: 2px;}
+
+#content .article .paginator a.thispage{color: #fff;background: #83BF73;}
+
+#content .article .paginator a:hover{color: #ffffff}
+
+#content .article .paginator .break{color: #999;padding: 0px 4px;margin: 2px;}
+
+#content .article .paginator .next{margin-left: 20px;}
+
+#content .article .statuses-wrapper{border-bottom: 1px solid #e5e5e5;padding-bottom: 25px}
+
+#content .article .statuses-wrapper .status-item{overflow: hidden;color: #555;}
+
+#content .article .statuses-wrapper .status-item .mod::after{
+    content: '\0020';
+    display: block;
+    clear: both;
+}
+
+#content .article .statuses-wrapper .status-item .mod .hd{margin-bottom: 10px;}
+
+#content .article .statuses-wrapper .status-item .mod .bd{
+    padding-left: 11%;
+}
+
+#content .article .statuses-wrapper .status-item .mod  .bd .block{
+    overflow: hidden;
+    padding: 16px 20px;
+    background: #f9f9f9;
+}
+
+#content .article .statuses-wrapper .status-item .mod  .bd .block .pic{
+    position: relative;
+    float: right;
+    overflow: hidden;
+    font-size: 0;
+    white-space: nowrap;
+    max-height: none;
+    width: 107px;
+    height: 72px;
+    margin-right: 5px;
+    margin-left: 24px;
+    margin-top: 4px;
+}
+
+#content .article .statuses-wrapper .status-item .mod  .bd .block .pic .pic-wrap{
+    position: absolute;
+}
+
+#content .article .statuses-wrapper .status-item .mod  .bd .block .pic .pic-wrap img{width:107px;vertical-align: middle;}
+
+#content .article .statuses-wrapper .status-item .mod .usr-pic{
+    position: relative;
+    z-index: 1;
+    margin-right: 20px;
+    float: left;
+}
+
+#content .article .statuses-wrapper .status-item .mod .title{
+    margin-bottom: 4px;
+    font-size: 14px;
+}
+
+#content .article .statuses-wrapper .status-item .mod .content{
+}
+
+#content .article .statuses-wrapper .status-item .mod .title a{
+    color: #37a;
+    text-decoration: none;
+    font-weight: normal;
+}
+
+#content .article .statuses-wrapper .status-item .mod p{word-wrap: break-word;}
+
+#content .article .statuses-wrapper .status-item .mod .text{
+    overflow: hidden;
+    position: relative;
+    font-size: 13px;
+    color: #9d9d9d;
+}
+
+#content .article .statuses-wrapper .status-item .mod a{font-weight: bold;color: #555;}
+
+#wrapper .aside{
+    width: 250px;float: right;
+}
+
+#wrapper .aside .notify-mod{
+    position: static;
+    margin: 0 0 20px;
+    padding: 16px 0 16px 18px;
+    line-height: 1.5;
+    background: #f2f7f6;
+    border-radius: 4px;
+}
+
+#wrapper .aside .notify-mod h2{
+    font: 15px Arial, Helvetica, sans-serif;
+    color: #072;
+    margin: 0 0 12px 0;
+    line-height: 150%;
+}
+
+#wrapper .aside .notify-mod ul{
+    font-size: 13px;
+    color: #cedcd9;
+}
+
+#wrapper .aside .notify-mod ul li{margin-top: 8px;}
+
+#wrapper .aside .notify-mod ul li a{color: #37a;}
+
+#wrapper .aside .notify-mod ul li a:hover{color: #ffffff;background: #3377aa}
+
+#wrapper .footer{
+    clear: both;
+    color: #999;
+    padding-top: 6px;
+    margin: 40px 0 20px 0;
+    overflow: hidden;
+    border-top: 1px dashed #ddd;
+}
+#wrapper .footer .fright{
+    float: right;
+}
+#wrapper .footer .fright a{color: #37a;}
+#wrapper .footer .fright a:hover{
+    background:#039;color:#fff;
+}
